crates/serpen/tests/snapshots/test_bundling_snapshots__bundled_code@future_imports_multiple.snap
---
source: crates/serpen/tests/test_bundling_snapshots.rs
expression: bundled_code.trim()
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

from __future__ import annotations, division, print_function

# ─ Module: module_b ─
def func_b():
    print("Function B")

# ─ Module: module_a ─
def func_a():
    print("Function A")

# ─ Entry Module: main ─
def main():
    func_a()
    func_b()
if __name__ == "__main__":
    main()
