crates/serpen/tests/snapshots/test_bundling_snapshots__bundled_code@relative_dot_import.snap
---
source: crates/serpen/tests/test_bundling_snapshots.rs
---
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: greetings.greeting ─
message = "Hello from relative dot import!"

# ─ Module: greetings ─
import types
greetings = types.ModuleType('greetings')
exec('greeting = greetings_greeting\n__all__ = ["greeting"]', globals(), greetings.__dict__)

# ─ Entry Module: main ─
print(greetings.greeting.message)
