crates/serpen/tests/snapshots/test_bundling_snapshots__bundling_simple_math.snap
---
source: crates/serpen/tests/test_bundling_snapshots.rs
expression: snapshot_content
---
=== BUNDLED CODE ===
#!/usr/bin/env python3
# Generated by Serpen - Python Source Bundler
# https://github.com/tinovyatkin/serpen

# ─ Module: utils ─
def format_result(operation, result):
    """Format operation result for display."""
    return f"{operation}: {result}"

# ─ Module: calculator ─
def add(a, b):
    """Add two numbers."""
    return a + b
def multiply(a, b):
    """Multiply two numbers."""
    return a * b

# ─ Entry Module: main ─
def main():
    result1 = add(5, 3)
    result2 = multiply(4, 7)
    print(format_result("Addition", result1))
    print(format_result("Multiplication", result2))
if __name__ == "__main__":
    main()

=== EXECUTION STATUS ===
SUCCESS

=== STDOUT ===
Addition: 8
Multiplication: 28

=== STDERR ===
