crates/serpen/tests/snapshots/test_bundling_snapshots__execution_results@future_imports_basic.snap
---
source: crates/serpen/tests/test_bundling_snapshots.rs
expression: execution_results
---
Status: SUCCESS
Stdout:
Processing result: {'input': {'key': 'value', 'numbers': [1, 2, 3]}, 'processed': True, 'output': ['key=value', 'numbers=[1, 2, 3]']}
Stderr:
