crates/serpen/tests/snapshots/test_bundling_snapshots__execution_results@future_imports_multiple.snap
---
source: crates/serpen/tests/test_bundling_snapshots.rs
expression: execution_results
---
Status: SUCCESS
Stdout:
Function A
Function B
Stderr:
