crates/serpen/tests/snapshots/test_bundling_snapshots__execution_results@late_future_imports.snap
---
source: crates/serpen/tests/test_bundling_snapshots.rs
---
ExecutionResults {
    status: Success,
    stdout: "Hello test\nOS: posix\nPython version: 3.13.",
    stderr: "",
}
