crates/serpen/tests/snapshots/test_bundling_snapshots__execution_results@relative_dot_import.snap
---
source: crates/serpen/tests/test_bundling_snapshots.rs
---
ExecutionResults {
    status: Failed(
        1,
    ),
    stdout: "",
    stderr: "Traceback (most recent call last):\n  File \"/var/folders/hz/r8gcpv8d5zv7g_2z3wmkhxbr0000gn/T/.tmpCFpYXD/bundled.py\", line 11, in <module>\n    exec('greeting = greetings_greeting\\n__all__ = [\"greeting\"]', globals(), greetings.__dict__)\n  File \"<string>\", line 1, in <module>\nNameError: name 'greetings_greeting' is not defined",
}
